--- a/content/projects/v2.md
+++ b/content/projects/v2.md
@@ -1,13 +1,13 @@
 ---
-date: '2016-12-01'
+date: '2025-02-01'
 title: 'Personal Website V2'
-github: 'https://github.com/bchiang7/v2'
-external: 'https://bchiang7.github.io/v2/'
+github: 'https://github.com/chrisanhthien/portfolioV2'
+external: 'https://github.com/chrisanhthien/portfolioV2'
 tech:
-  - Jekyll
-  - SCSS
   - JS
+  - Gatsby
+company: 'Home'
 showInProjects: true
 ---
 
-Second iteration of my personal website. Designed and developed with a conscious effort to avoid using any superfluous frameworks like Bootstrap.
+Designed and Adapted from Brittany Chiang's Design
